--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Poppins:wght@300;500;600;700&family=Grey+Qo&family=Parisienne&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Poppins:wght@300;400;500;600;700;800;900&family=Grey+Qo&family=Parisienne&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500;700&display=swap');
 
 $indigo: #5603ad;
 $purple: #8965e0;
@@ -24,7 +24,7 @@ $darker: black;
 
 *, ::before, ::after{
     box-sizing: border-box;
-    font-family: 'Poppins', san-serif;
+    font-family: 'Poppins', sans-serif;
     color: $gray;
     font-weight: 300;
     margin: 0;
@@ -59,7 +59,7 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: $purple;
+  background: $dark;
   border-radius: 10px;
 }
 
