--- a/styles/skillest.scss
+++ b/styles/skillest.scss
@@ -170,7 +170,8 @@
                             cursor: pointer;
                         }
                     }
-                    span:nth-child(7), span:nth-child(8), span:nth-child(9){
+                    // span:nth-child(7), span:nth-child(8), span:nth-child(9){
+                    span:nth-child(7){
                         img{
                             padding: 0.7rem;
                         }
@@ -178,6 +179,17 @@
                         transition: .3s ease;
                         &:hover{
                             background: rgba(#4effca, $alpha: 0.2);
+                            cursor: pointer;
+                        }
+                    }
+                    span:nth-child(8){
+                        img{
+                            padding: 0.7rem;
+                        }
+                        color: #5ed3f3;
+                        transition: .3s ease;
+                        &:hover{
+                            background: rgba(#5ed3f3, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
