--- a/styles/skillest.scss
+++ b/styles/skillest.scss
@@ -1,21 +1,21 @@
-.skillest{
+.skillest {
     display: flex;
     justify-content: center;
     align-items: flex-start;
     min-height: 100vh;
     margin-bottom: 5rem;
-    &-cards{
+    &-cards {
         width: 70%;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
         margin: 1rem;
-        &-title{
-            h1.active{
-                color: $purple; 
+        &-title {
+            h1.active {
+                color: $purple;
             }
-            h1{
+            h1 {
                 text-align: center;
                 color: $gray-dark;
                 font-family: 'Ubuntu';
@@ -23,35 +23,39 @@
                 font-weight: 500;
                 margin-bottom: 2rem;
             }
-            h2.active{
-                color: $light;    
+            h2.active {
+                color: $light;
             }
-            h2{
-                text-align: center;  
-                color: $default; 
+            h2 {
+                text-align: center;
+                color: $default;
                 font-family: 'Roboto';
                 font-weight: 500;
                 margin-bottom: 3rem;
             }
         }
-        &-container{
+        &-container {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
             width: 100%;
-            &-card.active{
+            &-card.active {
                 background: $gray-dark;
                 box-shadow: 0 2px 10px rgba($info, $alpha: 0.1);
             }
-            &-card.active:nth-child(3){div{ion-icon:nth-child(1){
-                color: $white;
-                transition: .3s ease;
-                &:hover{
-                    background: rgba($white, $alpha: 0.2);
-                    cursor: pointer;
+            &-card.active:nth-child(3) {
+                div {
+                    ion-icon:nth-child(1) {
+                        color: $white;
+                        transition: .3s ease;
+                        &:hover {
+                            background: rgba($white, $alpha: 0.2);
+                            cursor: pointer;
+                        }
+                    }
                 }
-            }}}
-            &-card{
+            }
+            &-card {
                 display: flex;
                 justify-content: center;
                 align-items: center;
@@ -62,13 +66,13 @@
                 overflow: hidden;
                 box-shadow: 0 2px 10px rgba($dark, $alpha: 0.2);
                 transition: transform .3s ease;
-                ion-icon{
+                ion-icon {
                     font-size: 35px;
                     padding: 0.5rem;
                     border-radius: 50%;
                     border: 2px solid $gray;
                 }
-                span{
+                span {
                     display: inline-block;
                     width: 55px;
                     height: 55px;
@@ -77,205 +81,207 @@
                     overflow: hidden;
                     cursor: pointer;
                     transition: transform .3s ease;
-                    img{
+                    img {
                         padding: 0.5rem;
                         text-align: center;
                     }
-                    &:hover{
+                    &:hover {
                         transform: translateY(-5px);
                     }
                 }
-                .circle{
+                .circle {
                     margin: 1rem;
                 }
-                p{
+                p {
                     margin: 1rem;
                 }
-                div{
+                div {
                     margin: 1rem;
                     text-align: center;
                 }
-                &:hover{
+                &:hover {
                     transform: translateX(-10px);
                 }
             }
-            &-card:nth-child(1){
-                .circle{
+            &-card:nth-child(1) {
+                .circle {
                     color: $info;
                     border-color: $info;
                     background: rgba($info, $alpha: 0.2);
                 }
-                p{
+                p {
                     color: $info;
                 }
-                div{
-                    ion-icon{
-                        &:hover{
+                div {
+                    ion-icon {
+                        &:hover {
                             transform: translateY(-5px);
                         }
                     }
                 }
-                div{
-                    ion-icon:nth-child(1){
+                div {
+                    ion-icon:nth-child(1) {
                         color: #e54d26;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#e54d26, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    ion-icon:nth-child(2){
+                    ion-icon:nth-child(2) {
                         color: #3d8fc6;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#3d8fc6, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    ion-icon:nth-child(3){
+                    ion-icon:nth-child(3) {
                         color: #CD6799;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#CD6799, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    ion-icon:nth-child(4){
+                    ion-icon:nth-child(4) {
                         color: #efd81d;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#efd81d, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    span:nth-child(5){
-                        img{
+                    span:nth-child(5) {
+                        img {
                             padding: 0.6rem;
                         }
                         color: #3178c6;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#3178c6, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    span:nth-child(6){
-                        img{
+                    span:nth-child(6) {
+                        img {
                             padding: 0.6rem;
                         }
                         color: #ff3c00;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#ff3c00, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
                     // span:nth-child(7), span:nth-child(8), span:nth-child(9){
-                    span:nth-child(7){
-                        img{
+                    span:nth-child(7) {
+                        img {
                             padding: 0.7rem;
                         }
                         color: #4effca;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#4effca, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    span:nth-child(8){
-                        img{
+                    span:nth-child(8) {
+                        img {
                             padding: 0.7rem;
                         }
                         color: #5ed3f3;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#5ed3f3, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    
                 }
             }
-            &-card:nth-child(2){
-                .circle{
-                    color: $cyan;
-                    border-color: $cyan;
-                    background: rgba($cyan, $alpha: 0.2);
+            &-card:nth-child(2) {
+                .circle {
+                    color: #787cb4;
+                    border-color: #787cb4;
+                    background: rgba(#787cb4, $alpha: 0.2);
                 }
-                p{
-                    color: $cyan;
+                p {
+                    color: #787cb4;
                 }
-                div{
-                    span{
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                    }
-                    span:nth-child(1){
+                div {
+                    span:nth-child(1) {
                         color: #787cb4;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#787cb4, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
+                    span:nth-child(2) {
+                        color: #e0234e;
+                        transition: .3s ease;
+                        &:hover {
+                            background: rgba(#e0234e, $alpha: 0.2);
+                            cursor: pointer;
+                        }
+                    }
                 }
             }
-            &-card:nth-child(2){
-                .circle{
+            &-card:nth-child(3) {
+                .circle {
                     color: $warning;
                     border-color: $warning;
                     background: rgba($warning, $alpha: 0.2);
                 }
-                p{
+                p {
                     color: $warning;
                 }
-                div{
-                    ion-icon{
-                        &:hover{
+                div {
+                    ion-icon {
+                        &:hover {
                             transform: translateY(-5px);
                         }
                     }
                 }
-                div{
-                    ion-icon:nth-child(1){
+                div {
+                    ion-icon:nth-child(1) {
                         color: #181616;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#181616, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
-                    ion-icon:nth-child(2){
+                    ion-icon:nth-child(2) {
                         color: #2970f3;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#2970f3, $alpha: 0.2);
                             cursor: pointer;
                         }
                     }
                 }
             }
-            &-card:nth-child(3){
-                div{
-                    span:nth-child(1){
+            &-card:nth-child(4) {
+                div {
+                    span:nth-child(1) {
                         color: #0b48b0;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#0b48b0, $alpha: 0.2);
                         }
                     }
-                    span:nth-child(2){
+                    span:nth-child(2) {
                         color: #046b32;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#046b32, $alpha: 0.2);
                         }
                     }
-                    span:nth-child(3){
+                    span:nth-child(3) {
                         color: #a51424;
                         transition: .3s ease;
-                        &:hover{
+                        &:hover {
                             background: rgba(#a51424, $alpha: 0.2);
                         }
                     }
@@ -286,15 +292,15 @@
 }
 
 @media screen and (max-width: 1165px) {
-    .skillest{
-        &-cards{
-            &-container{
+    .skillest {
+        &-cards {
+            &-container {
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 flex-direction: column;
                 flex-wrap: nowrap;
-                &-card{
+                &-card {
                     width: 90%;
                 }
             }
@@ -303,8 +309,8 @@
 }
 
 @media screen and (max-width: 650px) {
-    .skillest{
-        &-cards{
+    .skillest {
+        &-cards {
             width: 90%;
             margin: 0.5rem;
         }
