--- a/styles/settings.scss
+++ b/styles/settings.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Birthstone&family=Whisper&family=Overpass:wght@300;400;500;600&family=Poppins:wght@300;400;500;600&family=Grey+Qo&family=Parisienne&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500;&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overpass:wght@300;400;500;600&family=Whisper&family=Birthstone&family=Poppins:wght@300;400;500;600&family=Grey+Qo&family=Parisienne&family=Roboto:wght@300;400&family=Ubuntu:wght@400;500&display=swap');
 
 $indigo: #5603ad;
 $purple: #8965e0;
