--- a/styles/other.scss
+++ b/styles/other.scss
@@ -5,7 +5,7 @@
   margin-bottom: 3rem;
   position: relative;
   overflow: hidden;
-  .rotate-card{
+  .rotate-card {
     background: linear-gradient(to right, $cyan, $info);
     position: absolute;
     display: flex;
@@ -19,7 +19,7 @@
     border-radius: 50%;
     animation: rotate 5s infinite;
     z-index: -1;
-    .rotate-content{
+    .rotate-content {
       width: 99%;
       height: 99%;
       border-radius: 50%;
@@ -78,34 +78,80 @@
 
       .cert {
         width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         flex-wrap: wrap;
         margin-bottom: 2.5rem;
         gap: 20px;
 
-        a {
-          width: 48%;
+        @media screen and (max-width: 400px) {
+          grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         }
 
         &-card {
-          width: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          border: 2px dotted $default;
-          border-radius: 5px;
-          padding: 15px 0;
-          background: rgba($color: $default, $alpha: 0.05);
-          transition: 0.3s ease;
-          span {
-            color: $default;
-            font-weight: 600;
-            font-size: 18px;
+          overflow: hidden;
+          background: #f4f7f6;
+          border: 1px solid #e6eaea;
+          .card-img {
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+            img {
+              cursor: pointer;
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              transition: transform 0.3s ease-out;
+              &:hover {
+                transform: scale(1.05);
+              }
+            }
           }
-          &:hover {
-            background: rgba($color: $default, $alpha: 0.1);
+          .card-body {
+            width: 100%;
+            padding: 1rem;
+            &__text {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: flex-start;
+              h3 {
+                width: 100%;
+                font-weight: 600;
+              }
+              h5 {
+                width: 100%;
+                text-align: right;
+                font-size: 15px;
+                font-style: italic;
+                font-weight: 400;
+              }
+            }
+            &__footer {
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+              flex-wrap: wrap;
+              gap: 10px;
+              margin-top: 10px;
+              padding-top: 7px;
+              border-top: 1px solid #e6eaea;
+              button {
+                padding: 0.25rem 0.5rem;
+                border-radius: 30px;
+                border: none;
+                color: #fff;
+              }
+              button:nth-child(n){
+                background: #ff4e4e;
+              }
+              button:nth-child(2n){
+                background: #8154ef;
+              }
+              button:nth-child(3n){
+                background: #f9a825;
+              }
+            }
           }
         }
       }
@@ -157,13 +203,15 @@ body.dark-mode {
       &-certification {
         .cert {
           &-card {
-            border: 2px dotted $light;
-            background: rgba($color: $default, $alpha: 0.5);
+            background-color: #2b2b2b;
+            border-color: #434343;
             span {
               color: $light;
             }
-            &:hover {
-              background: rgba($color: $default, $alpha: 0.1);
+            .card-body {
+              &__footer {
+                border-color: #434343;
+              }
             }
           }
         }
