--- a/styles/experience.scss
+++ b/styles/experience.scss
@@ -201,12 +201,33 @@
         border-radius: 5px;
         overflow: hidden;
         img {
-        position: absolute;
+          position: absolute;
           width: 100%;
           height: 100%;
           object-fit: cover;
           transition: 0.3s ease;
-          &:hover {
+        }
+        &::before {
+          content: "View Project";
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: rgba($dark, $alpha: 0.9);
+          color: $white;
+          font-weight: 600;
+          transition: 0.3s ease;
+          z-index: -1;
+          opacity: 0;
+        }
+        &:hover {
+          &::before {
+            z-index: 3;
+            opacity: 1;
+          }
+          img {
             transform: scale(1.1);
             box-shadow: 2px 2px 10px rgba($dark, $alpha: 0.4);
           }
