--- a/styles/navigation.scss
+++ b/styles/navigation.scss
@@ -283,3 +283,29 @@ body.dark-mode {
     }
   }
 }
+
+.guirlande {
+  pointer-events: none;
+  z-index: 10;
+  width: 100%;
+  height: 150px;
+  position: absolute;
+  top: 150px;
+  left: 0;
+}
+
+.guirlande1 {
+  height: 120px;
+  background: url("./../img/guirlande1.png") repeat-x 300% top;
+  top: -23px;
+}
+
+.guirlande2 {
+  background: url("./../img/guirlande2.png") repeat-x 70% top;
+  top: -71px;
+}
+
+.guirlande3 {
+  background: url("./../img/guirlande3.png") repeat-x 10% top;
+  top: -50px;
+}
