--- a/styles/other.scss
+++ b/styles/other.scss
@@ -96,6 +96,7 @@
             width: 100%;
             height: 200px;
             overflow: hidden;
+            background: $white;
             img {
               cursor: pointer;
               width: 100%;
