--- a/styles/components/loader.scss
+++ b/styles/components/loader.scss
@@ -10,6 +10,7 @@
   height: 100%;
   justify-content: center;
   align-items: center;
+  transition: all .5s ease-in-out;
 }
 .loader {
   display: flex;
